--- a/skin/frontend/greenfarm/default/css/styles.css
+++ b/skin/frontend/greenfarm/default/css/styles.css
@@ -11457,6 +11457,36 @@ div.paypal-logo span > img {
   background-color: transparent;
   cursor: pointer;
 }
+.customer-account .group-my-account .tab-content .buttons-set {
+  padding-left: 23%;
+}
+.customer-account .group-my-account .tab-content .buttons-set .back-link {
+  margin-right: 15px;
+  padding-left: 10px;
+  text-align: center;
+}
+.customer-account .group-my-account .tab-content .buttons-set .back-link a {
+  min-width: 134px;
+  padding: 7px 10px 8px;
+  display: block;
+  color: #444;
+  font-size: 14px;
+  text-decoration: none;
+  border: 1px solid #999;
+}
+.customer-account .group-my-account .tab-content .buttons-set .back-link small {
+  margin-top: -2px;
+  margin-right: 5px;
+  display: inline-block;
+  vertical-align: top;
+  font-size: 18px;
+}
+.customer-account .group-my-account .tab-content .buttons-set button.button {
+  float: left;
+  line-height: 24px;
+  font-size: 14px;
+  text-transform: none;
+}
 
 /* ============================================ *
  * Recurring Profiles
