--- a/app/design/frontend/greenfarm/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/greenfarm/default/template/catalog/product/list.phtml
@@ -39,7 +39,7 @@ $_helper = $this->helper('catalog/output');
 <?php if (!$_productCollection->count()): ?>
     <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
-    <div class="category-products">
+    <div class="category-products products-items">
         <?php echo $this->getToolbarHtml() ?>
         <?php // List mode ?>
         <?php if ($this->getMode() != 'grid'): ?>
@@ -89,38 +89,38 @@ $_helper = $this->helper('catalog/output');
                                 <div class="product-secondary">
                                     <?php echo $this->getPriceHtml($_product, true) ?>
                                 </div>
-                                <div class="actions">
-                                    <div class="actions-content">
-                                        <?php if (!$_product->canConfigure() && $_product->isSaleable()): ?>
+                                <div class="product-secondary">
+                                    <?php if (!$_product->canConfigure() && $_product->isSaleable()): ?>
+                                        <p class="action">
                                             <button type="button"
                                                     title="<?php echo $this->quoteEscape($this->__('Add to Cart')) ?>"
                                                     class="button btn-cart"
                                                     onclick="setLocation('<?php echo $this->getAddToCartUrl($_product) ?>')">
                                                 <span><span><?php echo $this->__('Add to Cart') ?></span></span>
                                             </button>
-                                        <?php elseif ($_product->getStockItem() && $_product->getStockItem()->getIsInStock()): ?>
-                                            <a title="<?php echo $this->quoteEscape($this->__('View Details')) ?>"
-                                               class="button btn-view"
-                                               href="<?php echo $_product->getProductUrl() ?>"><?php echo $this->__('View Details') ?></a>
-                                        <?php else: ?>
-                                            <p class="availability out-of-stock">
-                                                <span><?php echo $this->__('Out of stock') ?></span></p>
+                                        </p>
+                                    <?php elseif ($_product->getStockItem() && $_product->getStockItem()->getIsInStock()): ?>
+                                        <p class="action"><a
+                                                    title="<?php echo $this->quoteEscape($this->__('View Details')) ?>"
+                                                    class="button"
+                                                    href="<?php echo $_product->getProductUrl() ?>"><?php echo $this->__('View Details') ?></a>
+                                        </p>
+                                    <?php else: ?>
+                                        <p class="action availability out-of-stock">
+                                            <span><?php echo $this->__('Out of stock') ?></span></p>
+                                    <?php endif; ?>
+                                    <ul class="add-to-links">
+                                        <?php if ($this->helper('wishlist')->isAllow()) : ?>
+                                            <li><a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>"
+                                                   class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a>
+                                            </li>
                                         <?php endif; ?>
-                                        <ul class="add-to-links">
-                                            <?php if ($this->helper('wishlist')->isAllow()) : ?>
-                                                <li>
-                                                    <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>"
-                                                       class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a>
-                                                </li>
-                                            <?php endif; ?>
-                                            <?php if ($_compareUrl = $this->getAddToCompareUrl($_product)): ?>
-                                                <li><span class="separator">|</span> <a
-                                                            href="<?php echo $_compareUrl ?>"
-                                                            class="link-compare"><?php echo $this->__('Add to Compare') ?></a>
-                                                </li>
-                                            <?php endif; ?>
-                                        </ul>
-                                    </div>
+                                        <?php if ($_compareUrl = $this->getAddToCompareUrl($_product)): ?>
+                                            <li><span class="separator">|</span> <a href="<?php echo $_compareUrl ?>"
+                                                                                    class="link-compare"><?php echo $this->__('Add to Compare') ?></a>
+                                            </li>
+                                        <?php endif; ?>
+                                    </ul>
                                 </div>
                                 <div class="desc std">
                                     <?php echo $_helper->productAttribute($_product, $_product->getShortDescription(), 'short_description') ?>
@@ -141,52 +141,51 @@ $_helper = $this->helper('catalog/output');
 
         <?php $_collectionSize = $_productCollection->count() ?>
         <?php $_columnCount = $this->getColumnCount(); ?>
-            <ul class="products-grid products-grid--max-<?php echo $_columnCount; ?>-col">
+            <ul class="products_grid grid_<?php echo $_columnCount; ?>">
                 <?php $i = 0;
                 foreach ($_productCollection as $_product): ?>
                     <?php /*if ($i++%$_columnCount==0): ?>
             <?php endif*/ ?>
                     <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
-                        <a href="<?php echo $_product->getProductUrl() ?>"
-                           title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>"
-                           class="product-image">
-                            <?php $_imgSize = 210; ?>
-                            <img id="product-collection-image-<?php echo $_product->getId(); ?>"
-                                 src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize); ?>"
-                                 alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>"/>
-                        </a>
-                        <div class="product-info">
-                            <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>"
-                                                        title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a>
-                            </h2>
-                            <?php
-                            // Provides extra blocks on which to hang some features for products in the list
-                            // Features providing UI elements targeting this block will display directly below the product name
-                            if ($this->getChild('name.after')) {
-                                $_nameAfterChildren = $this->getChild('name.after')->getSortedChildren();
-                                foreach ($_nameAfterChildren as $_nameAfterChildName) {
-                                    $_nameAfterChild = $this->getChild('name.after')->getChild($_nameAfterChildName);
-                                    $_nameAfterChild->setProduct($_product);
-                                    echo $_nameAfterChild->toHtml();
+                        <div class="field-content">
+                            <div class="product-image"><a href="<?php echo $_product->getProductUrl() ?>"
+                               title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>"
+                               class="product-image">
+                                <?php $_imgSize = 210; ?>
+                                <img id="product-collection-image-<?php echo $_product->getId(); ?>"
+                                     src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize); ?>"
+                                     alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>"/>
+                            </a></div>
+                            <div class="product-info">
+                                <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>"
+                                                            title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a>
+                                </h2>
+                                <?php
+                                // Provides extra blocks on which to hang some features for products in the list
+                                // Features providing UI elements targeting this block will display directly below the product name
+                                if ($this->getChild('name.after')) {
+                                    $_nameAfterChildren = $this->getChild('name.after')->getSortedChildren();
+                                    foreach ($_nameAfterChildren as $_nameAfterChildName) {
+                                        $_nameAfterChild = $this->getChild('name.after')->getChild($_nameAfterChildName);
+                                        $_nameAfterChild->setProduct($_product);
+                                        echo $_nameAfterChild->toHtml();
+                                    }
                                 }
-                            }
-                            ?>
-                            <?php echo $this->getPriceHtml($_product, true) ?>
-                            <?php if ($_product->getRatingSummary()): ?>
-                                <?php echo $this->getReviewsSummaryHtml($_product, 'short') ?>
-                            <?php endif; ?>
-                            <div class="actions">
-                                <div class="actions-content">
+                                ?>
+                                <?php echo $this->getPriceHtml($_product, true) ?>
+                                <?php if ($_product->getRatingSummary()): ?>
+                                    <?php echo $this->getReviewsSummaryHtml($_product, 'short') ?>
+                                <?php endif; ?>
+                                <div class="actions">
                                     <?php if (!$_product->canConfigure() && $_product->isSaleable()): ?>
                                         <button type="button"
                                                 title="<?php echo $this->quoteEscape($this->__('Add to Cart')) ?>"
                                                 class="button btn-cart"
                                                 onclick="setLocation('<?php echo $this->getAddToCartUrl($_product) ?>')">
-                                            <span><span><?php echo $this->__('Add to Cart') ?></span></span>
-                                        </button>
+                                            <span><span><?php echo $this->__('Add to Cart') ?></span></span></button>
                                     <?php elseif ($_product->getStockItem() && $_product->getStockItem()->getIsInStock()): ?>
                                         <a title="<?php echo $this->quoteEscape($this->__('View Details')) ?>"
-                                           class="button btn-view"
+                                           class="button"
                                            href="<?php echo $_product->getProductUrl() ?>"><?php echo $this->__('View Details') ?></a>
                                     <?php else: ?>
                                         <p class="availability out-of-stock">
@@ -194,15 +193,13 @@ $_helper = $this->helper('catalog/output');
                                     <?php endif; ?>
                                     <ul class="add-to-links">
                                         <?php if ($this->helper('wishlist')->isAllow()) : ?>
-                                            <li>
-                                                <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>"
+                                            <li><a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>"
                                                    class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a>
                                             </li>
                                         <?php endif; ?>
                                         <?php if ($_compareUrl = $this->getAddToCompareUrl($_product)): ?>
-                                            <li><span class="separator">|</span> <a
-                                                        href="<?php echo $_compareUrl ?>"
-                                                        class="link-compare"><?php echo $this->__('Add to Compare') ?></a>
+                                            <li><span class="separator">|</span> <a href="<?php echo $_compareUrl ?>"
+                                                                                    class="link-compare"><?php echo $this->__('Add to Compare') ?></a>
                                             </li>
                                         <?php endif; ?>
                                     </ul>
