--- a/skin/frontend/greenfarm/default/scss/_var.scss
+++ b/skin/frontend/greenfarm/default/scss/_var.scss
@@ -107,6 +107,9 @@ $color06: #8a8a8a;
 $color07: #444;
 $color08: #e0e0e0;
 $color09: #222;
+$color10: #555;
+$color11: #66afe9;
+
 
 // =============================================
 // Base Colors
