--- a/skin/frontend/greenfarm/default/scss/content/_home.scss
+++ b/skin/frontend/greenfarm/default/scss/content/_home.scss
@@ -40,6 +40,9 @@ body.cms-home {
     .slideshow-container {
         margin-top: 0;
     }
+    .main {
+        background-color: $bg04;
+    }
 }
 
 .slideshow .banner-msg {
