--- a/app/design/frontend/greenfarm/default/template/page/2columns-left.phtml
+++ b/app/design/frontend/greenfarm/default/template/page/2columns-left.phtml
@@ -52,10 +52,14 @@
     <?php echo $this->getChildHtml('global_notices') ?>
     <div class="page" id="page-content-wrapper">
         <?php echo $this->getChildHtml('header') ?>
+        <section class="section-breadcrumb">
+            <div class="container">
+                <?php echo $this->getChildHtml('breadcrumbs') ?>
+            </div>
+        </section>
         <div class="main col2-left">
-            <div class="container pro-wrp">
+            <div class="container main-container pro-wrp">
                 <div class="row group-my-account">
-                    <?php echo $this->getChildHtml('breadcrumbs') ?>
                     <?php // This left_first block will display above the main content on smaller viewports ?>
                     <?php if ($_leftContent = $this->getChildHtml('left_first')): ?>
                         <div class="col-sm-3 sidebar"><?php echo $_leftContent; ?></div>
