--- a/app/design/frontend/greenfarm/default/template/page/full_width.phtml
+++ b/app/design/frontend/greenfarm/default/template/page/full_width.phtml
@@ -48,8 +48,12 @@
     <?php echo $this->getChildHtml('global_notices') ?>
     <div class="page" id="page-content-wrapper">
         <?php echo $this->getChildHtml('header') ?>
-            <div class="main">
+        <section class="section-breadcrumb">
+            <div class="fluid-main">
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
+            </div>
+        </section>
+            <div class="main">
                 <div class="fluid-main">
                     <?php echo $this->getChildHtml('global_messages') ?>
                     <?php echo $this->getChildHtml('content') ?>
