--- a/skin/frontend/greenfarm/default/scss/core/_form.scss
+++ b/skin/frontend/greenfarm/default/scss/core/_form.scss
@@ -138,6 +138,32 @@ select[multiple] {
     padding: 5px;
 }
 
+select.validate-select {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: $f-size;
+    line-height: 1.42857143;
+    color: $color10;
+    background-color: $c-white;
+    background-image: none;
+    border: 1px solid $c-fieldset-border;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    &:focus {
+        border-color: $color11;
+        outline: 0;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+    }
+}
+
+
 /* -------------------------------------------- *
  * Textarea
  */
@@ -156,8 +182,12 @@ textarea {
 .input-text {
     @include appearance(none);
     @include border-radius(2px);
+    height: 34px;
+    line-height: 1.42857143;
+    padding: 6px 12px;
     border: 1px solid $c-input-border;
-    background: #FFFFFF;
+    background-color: $c-white;
+    background-image: none;
     font-size: $f-size-l;
 
     &:focus {
